package GUI;

public class Main {
    public static void main(String[] args) throws Exception {
        StartScreen newGame = new StartScreen();
        newGame.run();
    }
}

